# api/swagger/v1/parking-services.swagger.json
@@ -182,6 +182,18 @@
       "properties": {
         "qrContent": {
           "type": "string"
+        },
+        "jamMasuk": {
+          "type": "string"
+        },
+        "jamKeluar": {
+          "type": "string"
+        },
+        "totalJam": {
+          "type": "string"
+        },
+        "amount": {
+          "type": "string"
         }
       }
     },
