# pkg/api/v1/parking-services.pb.go
@@ -256,6 +256,10 @@ func (m *ValidationParkingResponse) GetData() *ValidationParkingData {
 
 type ValidationParkingData struct {
 	QrContent            string   `protobuf:"bytes,1,opt,name=qrContent,proto3" json:"qrContent,omitempty"`
+	JamMasuk             string   `protobuf:"bytes,2,opt,name=jamMasuk,proto3" json:"jamMasuk,omitempty"`
+	JamKeluar            string   `protobuf:"bytes,3,opt,name=jamKeluar,proto3" json:"jamKeluar,omitempty"`
+	TotalJam             string   `protobuf:"bytes,4,opt,name=totalJam,proto3" json:"totalJam,omitempty"`
+	Amount               string   `protobuf:"bytes,5,opt,name=amount,proto3" json:"amount,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -293,6 +297,34 @@ func (m *ValidationParkingData) GetQrContent() string {
 	return ""
 }
 
+func (m *ValidationParkingData) GetJamMasuk() string {
+	if m != nil {
+		return m.JamMasuk
+	}
+	return ""
+}
+
+func (m *ValidationParkingData) GetJamKeluar() string {
+	if m != nil {
+		return m.JamKeluar
+	}
+	return ""
+}
+
+func (m *ValidationParkingData) GetTotalJam() string {
+	if m != nil {
+		return m.TotalJam
+	}
+	return ""
+}
+
+func (m *ValidationParkingData) GetAmount() string {
+	if m != nil {
+		return m.Amount
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*RegisterParkingRequest)(nil), "v1.RegisterParkingRequest")
 	proto.RegisterType((*RegisterParkingResponse)(nil), "v1.RegisterParkingResponse")
@@ -304,42 +336,45 @@ func init() {
 func init() { proto.RegisterFile("parking-services.proto", fileDescriptor_fc30adc9331bb405) }
 
 var fileDescriptor_fc30adc9331bb405 = []byte{
-	// 545 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x53, 0x4f, 0x6f, 0xd3, 0x3e,
-	0x18, 0x96, 0xdb, 0x6a, 0xd3, 0x3c, 0xfd, 0xf4, 0x9b, 0x8c, 0xe8, 0xda, 0x32, 0xa4, 0x28, 0x02,
-	0x31, 0x95, 0x25, 0x69, 0x4b, 0xe1, 0x50, 0x2e, 0x30, 0x76, 0x46, 0x53, 0x90, 0xb8, 0xbb, 0xc9,
-	0x2b, 0xd7, 0x2c, 0xb5, 0x33, 0xdb, 0xcd, 0x40, 0xbb, 0x21, 0x4e, 0x88, 0x03, 0x82, 0x1b, 0x77,
-	0x3e, 0x11, 0x9f, 0x00, 0x09, 0xbe, 0x07, 0xaa, 0xeb, 0xfe, 0x59, 0x93, 0x03, 0x17, 0x4e, 0xb1,
-	0x9f, 0xe7, 0x79, 0xdf, 0xf7, 0xf1, 0x63, 0x07, 0x37, 0x73, 0xaa, 0x2e, 0xb8, 0x60, 0x81, 0x06,
-	0x55, 0xf0, 0x04, 0x74, 0x98, 0x2b, 0x69, 0x24, 0xa9, 0x15, 0xfd, 0xce, 0x11, 0x93, 0x92, 0x65,
-	0x10, 0xd1, 0x9c, 0x47, 0x54, 0x08, 0x69, 0xa8, 0xe1, 0x52, 0x38, 0x45, 0xe7, 0xc4, 0x7e, 0x92,
-	0x80, 0x81, 0x08, 0xf4, 0x15, 0x65, 0x0c, 0x54, 0x24, 0x73, 0xab, 0x28, 0xab, 0xfd, 0x53, 0xdc,
-	0x8c, 0x81, 0x71, 0x6d, 0x40, 0x9d, 0x2f, 0x26, 0xc6, 0x70, 0x39, 0x03, 0x6d, 0xc8, 0x01, 0xae,
-	0xd3, 0x9c, 0xb7, 0x90, 0x87, 0x8e, 0xf7, 0xe2, 0xf9, 0x92, 0x34, 0xf1, 0x4e, 0x9e, 0x51, 0xf3,
-	0x52, 0xb6, 0x6a, 0x16, 0x74, 0x3b, 0xff, 0x13, 0xc2, 0x87, 0xa5, 0x26, 0x3a, 0x97, 0x42, 0x03,
-	0x21, 0xb8, 0x91, 0xc8, 0x14, 0x5c, 0x1b, 0xbb, 0x9e, 0xf7, 0xd1, 0x86, 0x9a, 0x99, 0x5e, 0xf6,
-	0x59, 0xec, 0x48, 0x0b, 0xef, 0x4e, 0x41, 0x6b, 0xca, 0xa0, 0x55, 0xb7, 0xc4, 0x72, 0x4b, 0x1e,
-	0xe2, 0x46, 0x4a, 0x0d, 0x6d, 0x35, 0x3c, 0x74, 0xbc, 0x3f, 0x38, 0x0c, 0x8b, 0x7e, 0xb8, 0x35,
-	0xf0, 0x8c, 0x1a, 0x1a, 0x5b, 0x91, 0x7f, 0x8d, 0x6f, 0x55, 0x90, 0xe4, 0x1e, 0xfe, 0x6f, 0x31,
-	0xc7, 0x81, 0xce, 0xd2, 0x4d, 0x90, 0x1c, 0xe1, 0x3d, 0x2e, 0x0a, 0xc9, 0x13, 0x58, 0x1d, 0x73,
-	0x0d, 0x10, 0x0f, 0xef, 0x83, 0x30, 0xa0, 0x20, 0x3d, 0xa3, 0x66, 0xe9, 0x72, 0x13, 0xf2, 0x3f,
-	0x23, 0xdc, 0x7e, 0x4d, 0x33, 0x9e, 0xda, 0x94, 0xff, 0x4d, 0x1a, 0xc1, 0x8d, 0x34, 0xda, 0xf3,
-	0x34, 0x4a, 0x23, 0x37, 0xf2, 0x78, 0x8c, 0x6f, 0x57, 0xd2, 0xf3, 0xb3, 0x5e, 0xaa, 0x17, 0x52,
-	0x18, 0x10, 0xc6, 0x59, 0x5a, 0x03, 0x83, 0xef, 0x35, 0xfc, 0xbf, 0x53, 0xbf, 0x72, 0x6f, 0x90,
-	0x7c, 0x28, 0xdf, 0xf4, 0x8a, 0xeb, 0x54, 0xdc, 0x8a, 0x7b, 0x4b, 0x9d, 0x3b, 0x95, 0xdc, 0x22,
-	0x14, 0xbf, 0xf7, 0xfe, 0xc7, 0xaf, 0xaf, 0xb5, 0xae, 0x7f, 0x3f, 0x2a, 0xfa, 0xd1, 0xf6, 0xb3,
-	0x8f, 0x94, 0xab, 0x0a, 0x1c, 0x33, 0x42, 0x5d, 0xf2, 0x11, 0xe1, 0xb6, 0xeb, 0xb2, 0x3e, 0xd9,
-	0x5f, 0x19, 0xb9, 0x5b, 0x19, 0xd6, 0xca, 0xca, 0xc0, 0x5a, 0x39, 0xf1, 0x1f, 0x54, 0x5a, 0x29,
-	0x56, 0x75, 0x1b, 0x66, 0x4e, 0x7f, 0xa3, 0x2f, 0xcf, 0x7f, 0x22, 0x72, 0x8d, 0x0f, 0xce, 0xb7,
-	0x0a, 0xfc, 0x71, 0x19, 0x23, 0x4f, 0x26, 0xc6, 0xe4, 0x7a, 0x14, 0x45, 0x8c, 0x9b, 0xc9, 0x6c,
-	0x1c, 0x26, 0x72, 0x1a, 0xa5, 0x3c, 0xb9, 0x78, 0xc7, 0x40, 0xd1, 0x2c, 0xe5, 0x91, 0xfd, 0x2f,
-	0x83, 0xed, 0xe1, 0x9d, 0xe6, 0xa6, 0xe8, 0x19, 0x9b, 0x52, 0x9e, 0xcd, 0x6b, 0x07, 0xf5, 0x7e,
-	0xd8, 0xeb, 0x22, 0x34, 0x38, 0xa0, 0x79, 0x9e, 0xf1, 0xc4, 0xda, 0x8b, 0xde, 0x68, 0x29, 0x46,
-	0x25, 0x24, 0x7e, 0x8a, 0xeb, 0xc3, 0xde, 0x90, 0x0c, 0x71, 0x37, 0x06, 0x33, 0x53, 0x02, 0x52,
-	0xef, 0x6a, 0x02, 0xc2, 0x33, 0x13, 0xf0, 0x14, 0x68, 0x39, 0x53, 0x09, 0x78, 0xa9, 0x04, 0xed,
-	0x09, 0x69, 0x3c, 0x78, 0xcb, 0xb5, 0x09, 0xc9, 0x0e, 0x6e, 0x7c, 0xab, 0xa1, 0xdd, 0xf1, 0x8e,
-	0x35, 0xf6, 0xe8, 0x4f, 0x00, 0x00, 0x00, 0xff, 0xff, 0xe1, 0x63, 0xec, 0xb9, 0x9a, 0x04, 0x00,
-	0x00,
+	// 599 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x94, 0x4d, 0x6f, 0xd3, 0x4c,
+	0x10, 0xc7, 0xb5, 0x49, 0x9e, 0xf6, 0xe9, 0x56, 0x88, 0x6a, 0x11, 0x69, 0x1a, 0x8a, 0x64, 0x59,
+	0x20, 0xaa, 0xd0, 0xc4, 0x4d, 0xa8, 0x38, 0x94, 0x0b, 0x94, 0x9e, 0x40, 0xa0, 0xca, 0x48, 0xdc,
+	0xa7, 0xf6, 0xc8, 0xd9, 0xd6, 0xde, 0x75, 0x77, 0xd7, 0x29, 0xa8, 0x37, 0xc4, 0x09, 0x71, 0x40,
+	0x70, 0xe3, 0x8a, 0xf8, 0x44, 0x7c, 0x02, 0x24, 0xf8, 0x1e, 0xc8, 0x9b, 0xcd, 0x4b, 0x13, 0x1f,
+	0xb8, 0x70, 0x8a, 0xe7, 0x3f, 0x6f, 0xbf, 0x19, 0x4f, 0x4c, 0x9b, 0x39, 0xa8, 0x33, 0x2e, 0x92,
+	0xae, 0x46, 0x35, 0xe2, 0x11, 0xea, 0x5e, 0xae, 0xa4, 0x91, 0xac, 0x36, 0xea, 0xb7, 0xb7, 0x13,
+	0x29, 0x93, 0x14, 0x03, 0xc8, 0x79, 0x00, 0x42, 0x48, 0x03, 0x86, 0x4b, 0xe1, 0x22, 0xda, 0xbb,
+	0xf6, 0x27, 0xea, 0x26, 0x28, 0xba, 0xfa, 0x02, 0x92, 0x04, 0x55, 0x20, 0x73, 0x1b, 0xb1, 0x1c,
+	0xed, 0x1f, 0xd2, 0x66, 0x88, 0x09, 0xd7, 0x06, 0xd5, 0xf1, 0xb8, 0x63, 0x88, 0xe7, 0x05, 0x6a,
+	0xc3, 0x36, 0x68, 0x1d, 0x72, 0xde, 0x22, 0x1e, 0xd9, 0x59, 0x0b, 0xcb, 0x47, 0xd6, 0xa4, 0x2b,
+	0x79, 0x0a, 0xe6, 0xa5, 0x6c, 0xd5, 0xac, 0xe8, 0x2c, 0xff, 0x23, 0xa1, 0x9b, 0x4b, 0x45, 0x74,
+	0x2e, 0x85, 0x46, 0xc6, 0x68, 0x23, 0x92, 0x31, 0xba, 0x32, 0xf6, 0xb9, 0xac, 0xa3, 0x0d, 0x98,
+	0x42, 0x4f, 0xea, 0x8c, 0x2d, 0xd6, 0xa2, 0xab, 0x19, 0x6a, 0x0d, 0x09, 0xb6, 0xea, 0xd6, 0x31,
+	0x31, 0xd9, 0x7d, 0xda, 0x88, 0xc1, 0x40, 0xab, 0xe1, 0x91, 0x9d, 0xf5, 0xc1, 0x66, 0x6f, 0xd4,
+	0xef, 0x2d, 0x34, 0x3c, 0x02, 0x03, 0xa1, 0x0d, 0xf2, 0x2f, 0xe9, 0x8d, 0x0a, 0x27, 0xbb, 0x43,
+	0xaf, 0x8d, 0xfb, 0x38, 0xd1, 0x21, 0x5d, 0x15, 0xd9, 0x36, 0x5d, 0xe3, 0x62, 0x24, 0x79, 0x84,
+	0xd3, 0x31, 0x67, 0x02, 0xf3, 0xe8, 0x3a, 0x0a, 0x83, 0x0a, 0xe3, 0x23, 0x30, 0x13, 0xca, 0x79,
+	0xc9, 0xff, 0x44, 0xe8, 0xd6, 0x6b, 0x48, 0x79, 0x6c, 0xb7, 0xfc, 0x6f, 0xb6, 0xd1, 0xbd, 0xb2,
+	0x8d, 0xad, 0x72, 0x1b, 0x4b, 0x2d, 0xe7, 0xf6, 0xf1, 0x8d, 0xd0, 0x9b, 0x95, 0xfe, 0x72, 0xd8,
+	0x73, 0xf5, 0x54, 0x0a, 0x83, 0xc2, 0x38, 0xa6, 0x99, 0xc0, 0xda, 0xf4, 0xff, 0x53, 0xc8, 0x5e,
+	0x80, 0x2e, 0xce, 0x1c, 0xda, 0xd4, 0x2e, 0x33, 0x4f, 0x21, 0x7b, 0x8e, 0x69, 0x01, 0xca, 0xe1,
+	0xcd, 0x84, 0x32, 0xd3, 0x48, 0x03, 0xe9, 0x33, 0xc8, 0x2c, 0xe4, 0x5a, 0x38, 0xb5, 0xcb, 0x71,
+	0x21, 0x93, 0x85, 0x30, 0xad, 0xff, 0xc6, 0xe3, 0x8e, 0xad, 0xc1, 0xf7, 0x1a, 0xbd, 0xee, 0xd8,
+	0x5e, 0xb9, 0x93, 0x67, 0xef, 0x97, 0x0f, 0x6b, 0xea, 0x6b, 0x57, 0x1c, 0x81, 0x3b, 0xdd, 0xf6,
+	0xad, 0x4a, 0xdf, 0xf8, 0x1d, 0xf8, 0x7b, 0xef, 0x7e, 0xfc, 0xfa, 0x52, 0xeb, 0xf8, 0x77, 0x83,
+	0x51, 0x3f, 0x58, 0xfc, 0x97, 0x05, 0xca, 0x65, 0x75, 0x9d, 0xe7, 0x80, 0x74, 0xd8, 0x07, 0x42,
+	0xb7, 0x5c, 0x95, 0xd9, 0x1e, 0xff, 0x0a, 0xe4, 0x76, 0xe5, 0xbb, 0x99, 0xa2, 0x0c, 0x2c, 0xca,
+	0xae, 0x7f, 0xaf, 0x12, 0x65, 0x34, 0xcd, 0x9b, 0x83, 0x39, 0xfc, 0x4d, 0x3e, 0x3f, 0xf9, 0x49,
+	0xd8, 0x25, 0xdd, 0x38, 0x5e, 0x48, 0xf0, 0x4f, 0x96, 0x35, 0xf6, 0x70, 0x68, 0x4c, 0xae, 0x0f,
+	0x82, 0x20, 0xe1, 0x66, 0x58, 0x9c, 0xf4, 0x22, 0x99, 0x05, 0x31, 0x8f, 0xce, 0xde, 0x26, 0xa8,
+	0x20, 0x8d, 0x79, 0x60, 0x3f, 0x03, 0xdd, 0xc5, 0xe6, 0xed, 0xe6, 0x7c, 0xd0, 0xe3, 0x24, 0x03,
+	0x9e, 0x96, 0xb9, 0x83, 0x7a, 0xbf, 0xb7, 0xd7, 0x21, 0x64, 0xb0, 0x01, 0x79, 0x9e, 0xf2, 0xc8,
+	0xe2, 0x05, 0xa7, 0x5a, 0x8a, 0x83, 0x25, 0x25, 0x7c, 0x44, 0xeb, 0xfb, 0x7b, 0xfb, 0x6c, 0x9f,
+	0x76, 0x42, 0x34, 0x85, 0x12, 0x18, 0x7b, 0x17, 0x43, 0x14, 0x9e, 0x19, 0xa2, 0xa7, 0x50, 0xcb,
+	0x42, 0x45, 0xe8, 0xc5, 0x12, 0xb5, 0x27, 0xa4, 0xf1, 0xf0, 0x0d, 0xd7, 0xa6, 0xc7, 0x56, 0x68,
+	0xe3, 0x6b, 0x8d, 0xac, 0x9e, 0xac, 0x58, 0xb0, 0x07, 0x7f, 0x02, 0x00, 0x00, 0xff, 0xff, 0xb7,
+	0x2f, 0x24, 0xa7, 0x09, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
